Correction position titre du banner version tablette

--- a/src/style/card.scss
+++ b/src/style/card.scss
@@ -59,7 +59,7 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 
     @media (max-width: 1024px) {
     font-size: 32px;
-    top: 240px;
+    top: 220px;
     left: 30px;
     }
 
